Fix button color on iPhone

--- a/style.css
+++ b/style.css
@@ -77,6 +77,8 @@ button {
     background-color: white;
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     font-size: large;
+    color: black;
+    border-color: grey;
     width: 128px;
     height: 64px;
     border-radius: 16px;
